[package]
name = "broadcaster"
version = "0.3.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Broadcasting futures mpmc channel"
repository = "https://github.com/leo60228/broadcaster"
homepage = "https://github.com/leo60228/broadcaster"
readme = "README.md"
keywords = ["futures", "broadcast", "channel", "mpmc"]
categories = ["asynchronous", "concurrency"]
license = "MIT OR Apache-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "leo60228/broadcaster" }
is-it-maintained-open-issues = { repository = "leo60228/broadcaster" }
maintenance = { status = "experimental"}

[features]
default = ["default-channels", "parking-lot"]
default-channels = ["futures-channel"]
parking-lot = ["parking_lot"]

[dependencies]
futures-core = "0.3.0"
futures-sink = "0.3.0"
futures-util = { version = "0.3.0", features = ["sink"] }
futures-channel = { version = "0.3.0", optional = true, features = ["sink"] }
slab = "0.4.2"
parking_lot = { version = "0.9.0", optional = true }

[dev-dependencies]
futures-executor = "0.3.0"
